--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.1",
     "@stitches/react": "^1.2.8",
     "@types/node": "^22.1.0",
     "react": "^18.3.1",
