--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -16,6 +16,8 @@
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
+    "jsxImportSource": "@emotion/react",
+    "types": ["@emotion/react/types/css-prop"],
 
     /* Linting */
     "strict": true,
@@ -26,6 +28,7 @@
     /* Alias */
     "baseUrl": ".",
     "paths": {
+      "@/*": ["src/*"],
       "@/components/*": ["src/components/*"],
       "@/configs/*": ["configs/*"]
     }
